Fixed spacing

--- a/Frontend/src/app/shared/components/time-frame-picker/time-frame-picker.component.scss
+++ b/Frontend/src/app/shared/components/time-frame-picker/time-frame-picker.component.scss
@@ -31,6 +31,7 @@
 h4 {
     display: inline;
     padding-right: 10px;
+    padding-left: 10px;
 }
 
 @media only screen and (max-width: 960px) {
